class ReproductorDVD:
    def encender(self):
        print("🔌 Reproductor DVD encendido.")

    def apagar(self):
        print("🔌 Reproductor DVD apagado.")

    def reproducir(self):
        print("🎥 Reproduciendo película...")
        print("✅ Película en curso...\n")

    def detener(self):
        print("⏹️  Deteniendo reproducción.")
