class SistemaSonido:
    def encender(self):
        print("🔊 Sistema de sonido encendido.")

    def apagar(self):
        print("🔇 Sistema de sonido apagado.")

    def volumen(self, nivel):
        print(f"📶 Volumen ajustado al {nivel}%.")
