class Television:
    def encender(self):
        print("📺 Televisión encendida.")

    def apagar(self):
        print("📺 Televisión apagada.")

    def cambiar_canal(self):
        print("🔄 Canal cambiado.")
